# teakshare

teak-fds/: .gitignore  README.md  SKILL.md  pyproject.toml
teak-fds/references/: agent-validation.md  api-scope.md  cli.md  config.md  data-types.md  facade.md  install.md  internal-apis.md  routing.md
teak-fds/scripts/: verify_all_apis.py  verify_capabilities.py
teak-fds/teakfds/: __init__.py  __main__.py  api_semantics.py  bootstrap.py  cache_manager.py  cli.py  credentials.py  datasource_log.py  finance_data_source.py  models.py  normalize_finance.py  rate_limiter.py  router.py  tushare_lite.py  tushare_table.py  valuation_utils.py  xueqiu_client.py
teak-fds/teakfds/adapters/: __init__.py  financial_adapter.py
teak-fds/teakfds/integrations/: __init__.py  cninfo_rating.py  eastmoney_comment.py  eastmoney_datacenter.py  eastmoney_forecast.py  eastmoney_fund_flow.py  eastmoney_gsrl.py  eastmoney_industry.py  eastmoney_notice.py  eastmoney_report.py  ths_forecast_lite.py  tushare_concept.py
teak-fds/teakfds/providers/: __init__.py  aggregate_provider.py  baidu_provider.py  base_provider.py  cninfo_provider.py  eastmoney_provider.py  iwencai_provider.py  lixinger_provider.py  local_tdx_provider.py  mx_data_provider.py  mx_search_provider.py  qlib_provider.py  search_fallback_provider.py  sina_provider.py  tdx_provider.py  tencent_provider.py  ths_provider.py  tushare_pro_bar_local.py  tushare_provider.py  xueqiu_provider.py
teak-fds/teakfds/providers/lixinger/: __init__.py  lixinger_spider.py  openclaw_query_service.py  settings.example.json
teak-fds/teakfds/providers/lixinger/db/: __init__.py  models.py
teak-fds/tests/: test_credentials.py  test_normalize_finance.py  test_return_shapes.py  test_smoke.py
